<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="button_reload">Reload</string>
    <string name="no_movies_found">No movies found.</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_sort_by">Sort by</string>
    <string name="preferences_sort_by_summary">Choose how to sort movies.</string>
    <string name="preferences_sort_by_key" translatable="false">sort_by</string>
    <string name="preferences_sort_by_default_value" translatable="false">popularity.desc</string>
    <string name="preferences_sort_by_offline_value" translatable="false">favorites</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="release_date_movie_detail">Release Date:</string>
    <string name="vote_average_movie_detail">Vote Average:</string>
    <string name="details_movie_detail">Details:</string>
    <string name="details_movie_videos">Videos:</string>
    <string name="details_movie_reviews">Reviews:</string>
    <string name="details_movie_details_unavailable">No details found.</string>
    <string name="details_movie_videos_unavailable">No videos found.</string>
    <string name="details_movie_reviews_unavailable">No reviews found.</string>
    <string name="details_movie_review_by">by</string>
    <string name="details_movie_favorite_add">Add to favorites</string>
    <string name="details_movie_favorite_remove">Remove from favorites</string>
    <string name="details_movie_favorite_added">added to favorites.</string>
    <string name="details_movie_favorite_removed">removed from favorites.</string>
    <string name="details_movie_favorite_loading">Loading...</string>
    <string name="details_movie_favorite_add_error">Add favorite failed: no internet connectivity</string>
    <string name="movie_site_youtube" translatable="false">YouTube</string>
    <string name="movie_site_youtube_base_url" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="movie_site_youtube_movie_placeholder" translatable="false">https://www.youtube.com/watch?v=BROWqjuTM0g</string>
    <string name="internal_storage_backdrop_image_path" translatable="false">backdrop</string>
    <string name="internal_storage_poster_image_path" translatable="false">poster</string>

</resources>
